Forgot Password Settled: Scrollbar Fixed and onDrawerClose added to the tabs

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,13 +23,14 @@ html{
 
 // creating a custom scrollbar 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 6px;
 }
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb {
     background: #805AD5;
+    border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover {
     background: #7637ff;
